--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# PyCharm .idea-Verzeichnis ignorieren
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +130,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+###                                                 ###
+### React Teil auf Basis von create-react-app       ###
+# dependencies
+node_modules
